--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "version": "1.0.1",
     "private": true,
     "dependencies": {
-        "8": "0.0.1",
-        "bip38": "^2.0.3",
-        "coinkey": "2.0.0",
-        "wif": "2.0.6"
+        "8": "^0.0.1",
+        "bip38": "^3.1.1",
+        "coinkey": "^3.0.0",
+        "wif": "^4.0.0"
     },
     "license": "MIT",
     "bin": {
